--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <img src="src/assets/7-77263_ultra-hd-wallpapers.jpg">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
